--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
 </nav>
 
 <!-- Hero -->
-<section class="hero-gradient min-h-screen flex items-center relative overflow-hidden">
-    <div class="absolute inset-0 opacity-10">
-        <div class="absolute top-20 right-10 w-72 h-72 bg-white rounded-full blur-3xl"></div>
-        <div class="absolute bottom-20 left-10 w-96 h-96 bg-accent rounded-full blur-3xl"></div>
+<section class="min-h-screen flex items-center relative overflow-hidden">
+    <div class="absolute inset-0">
+        <img src="https://images.unsplash.com/photo-1486406146926-c627a92ad1ab?w=1920&q=80" alt="" class="w-full h-full object-cover">
+        <div class="absolute inset-0 bg-gradient-to-r from-navy-950/90 via-navy-900/80 to-navy-800/60"></div>
     </div>
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-32 relative z-10">
         <div class="max-w-3xl">
@@ -135,25 +135,27 @@
                     <span class="bg-navy-50 text-navy-800 px-4 py-2 rounded-full text-sm font-medium">Certyfikowany księgowy</span>
                 </div>
             </div>
-            <div class="bg-gradient-to-br from-navy-50 to-navy-100 rounded-3xl p-8 sm:p-12">
-                <div class="space-y-6">
+            <div class="relative rounded-3xl overflow-hidden">
+                <img src="https://images.unsplash.com/photo-1554224155-8d04cb21cd6c?w=800&q=80" alt="Profesjonalna analiza finansowa" class="w-full h-full object-cover absolute inset-0">
+                <div class="absolute inset-0 bg-gradient-to-br from-navy-900/85 to-navy-800/75 backdrop-blur-sm"></div>
+                <div class="relative z-10 p-8 sm:p-12 space-y-6">
                     <div class="flex items-start gap-4">
-                        <div class="w-12 h-12 bg-accent/10 rounded-xl flex items-center justify-center flex-shrink-0">
-                            <svg class="w-6 h-6 text-accent" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"/></svg>
+                        <div class="w-12 h-12 bg-white/15 rounded-xl flex items-center justify-center flex-shrink-0">
+                            <svg class="w-6 h-6 text-accent-light" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"/></svg>
                         </div>
-                        <div><h3 class="font-semibold text-navy-900 mb-1">Rzetelność</h3><p class="text-gray-600 text-sm">Każde zlecenie traktujemy z najwyższą starannością i&nbsp;dbałością o&nbsp;szczegóły.</p></div>
+                        <div><h3 class="font-semibold text-white mb-1">Rzetelność</h3><p class="text-white/70 text-sm">Każde zlecenie traktujemy z najwyższą starannością i&nbsp;dbałością o&nbsp;szczegóły.</p></div>
                     </div>
                     <div class="flex items-start gap-4">
-                        <div class="w-12 h-12 bg-accent/10 rounded-xl flex items-center justify-center flex-shrink-0">
-                            <svg class="w-6 h-6 text-accent" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"/></svg>
+                        <div class="w-12 h-12 bg-white/15 rounded-xl flex items-center justify-center flex-shrink-0">
+                            <svg class="w-6 h-6 text-accent-light" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"/></svg>
                         </div>
-                        <div><h3 class="font-semibold text-navy-900 mb-1">Terminowość</h3><p class="text-gray-600 text-sm">Dotrzymujemy terminów — wiemy, jak ważny jest czas w&nbsp;biznesie.</p></div>
+                        <div><h3 class="font-semibold text-white mb-1">Terminowość</h3><p class="text-white/70 text-sm">Dotrzymujemy terminów — wiemy, jak ważny jest czas w&nbsp;biznesie.</p></div>
                     </div>
                     <div class="flex items-start gap-4">
-                        <div class="w-12 h-12 bg-accent/10 rounded-xl flex items-center justify-center flex-shrink-0">
-                            <svg class="w-6 h-6 text-accent" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0z"/></svg>
+                        <div class="w-12 h-12 bg-white/15 rounded-xl flex items-center justify-center flex-shrink-0">
+                            <svg class="w-6 h-6 text-accent-light" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0z"/></svg>
                         </div>
-                        <div><h3 class="font-semibold text-navy-900 mb-1">Indywidualne podejście</h3><p class="text-gray-600 text-sm">Każdy klient jest dla nas wyjątkowy — dopasowujemy rozwiązania do potrzeb.</p></div>
+                        <div><h3 class="font-semibold text-white mb-1">Indywidualne podejście</h3><p class="text-white/70 text-sm">Każdy klient jest dla nas wyjątkowy — dopasowujemy rozwiązania do potrzeb.</p></div>
                     </div>
                 </div>
             </div>
@@ -170,8 +172,12 @@
             <p class="text-gray-600">Oferujemy szeroki zakres usług finansowych, dopasowanych do potrzeb zarówno małych firm, jak i dużych przedsiębiorstw.</p>
         </div>
         <div class="grid sm:grid-cols-2 lg:grid-cols-4 gap-6">
-            <div class="service-card bg-white rounded-2xl p-7 border border-gray-100">
-                <div class="w-14 h-14 bg-navy-900 rounded-2xl flex items-center justify-center mb-5">
+            <div class="service-card bg-white rounded-2xl overflow-hidden border border-gray-100">
+                <div class="h-44 overflow-hidden">
+                    <img src="https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?w=600&q=80" alt="Audyt finansowy" class="w-full h-full object-cover hover:scale-105 transition-transform duration-500">
+                </div>
+                <div class="p-7">
+                <div class="w-14 h-14 bg-navy-900 rounded-2xl flex items-center justify-center mb-5 -mt-12 relative z-10 border-4 border-white">
                     <svg class="w-7 h-7 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 17v-2m3 2v-4m3 4v-6m2 10H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"/></svg>
                 </div>
                 <h3 class="text-xl font-bold text-navy-900 mb-3">Audyt finansowy</h3>
@@ -181,9 +187,14 @@
                     <li class="flex items-start gap-2"><span class="text-accent mt-0.5">•</span>Audyt projektów unijnych</li>
                     <li class="flex items-start gap-2"><span class="text-accent mt-0.5">•</span>Due diligence finansowe</li>
                 </ul>
+                </div>
             </div>
-            <div class="service-card bg-white rounded-2xl p-7 border border-gray-100">
-                <div class="w-14 h-14 bg-accent rounded-2xl flex items-center justify-center mb-5">
+            <div class="service-card bg-white rounded-2xl overflow-hidden border border-gray-100">
+                <div class="h-44 overflow-hidden">
+                    <img src="https://images.unsplash.com/photo-1554224154-26032ffc0d07?w=600&q=80" alt="Księgowość" class="w-full h-full object-cover hover:scale-105 transition-transform duration-500">
+                </div>
+                <div class="p-7">
+                <div class="w-14 h-14 bg-accent rounded-2xl flex items-center justify-center mb-5 -mt-12 relative z-10 border-4 border-white">
                     <svg class="w-7 h-7 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1M21 12a9 9 0 11-18 0 9 9 0 0118 0z"/></svg>
                 </div>
                 <h3 class="text-xl font-bold text-navy-900 mb-3">Księgowość</h3>
@@ -193,9 +204,14 @@
                     <li class="flex items-start gap-2"><span class="text-accent mt-0.5">•</span>Ewidencja ryczałtowa</li>
                     <li class="flex items-start gap-2"><span class="text-accent mt-0.5">•</span>Rozliczenia VAT, CIT, PIT</li>
                 </ul>
+                </div>
             </div>
-            <div class="service-card bg-white rounded-2xl p-7 border border-gray-100">
-                <div class="w-14 h-14 bg-navy-700 rounded-2xl flex items-center justify-center mb-5">
+            <div class="service-card bg-white rounded-2xl overflow-hidden border border-gray-100">
+                <div class="h-44 overflow-hidden">
+                    <img src="https://images.unsplash.com/photo-1450101499163-c8848c66ca85?w=600&q=80" alt="Doradztwo podatkowe" class="w-full h-full object-cover hover:scale-105 transition-transform duration-500">
+                </div>
+                <div class="p-7">
+                <div class="w-14 h-14 bg-navy-700 rounded-2xl flex items-center justify-center mb-5 -mt-12 relative z-10 border-4 border-white">
                     <svg class="w-7 h-7 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"/></svg>
                 </div>
                 <h3 class="text-xl font-bold text-navy-900 mb-3">Doradztwo podatkowe</h3>
@@ -205,9 +221,14 @@
                     <li class="flex items-start gap-2"><span class="text-accent mt-0.5">•</span>Reprezentacja przed US</li>
                     <li class="flex items-start gap-2"><span class="text-accent mt-0.5">•</span>Planowanie podatkowe</li>
                 </ul>
+                </div>
             </div>
-            <div class="service-card bg-white rounded-2xl p-7 border border-gray-100">
-                <div class="w-14 h-14 bg-navy-600 rounded-2xl flex items-center justify-center mb-5">
+            <div class="service-card bg-white rounded-2xl overflow-hidden border border-gray-100">
+                <div class="h-44 overflow-hidden">
+                    <img src="https://images.unsplash.com/photo-1497366216548-37526070297c?w=600&q=80" alt="Outsourcing" class="w-full h-full object-cover hover:scale-105 transition-transform duration-500">
+                </div>
+                <div class="p-7">
+                <div class="w-14 h-14 bg-navy-600 rounded-2xl flex items-center justify-center mb-5 -mt-12 relative z-10 border-4 border-white">
                     <svg class="w-7 h-7 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 21V5a2 2 0 00-2-2H7a2 2 0 00-2 2v16m14 0h2m-2 0h-5m-9 0H3m2 0h5M9 7h1m-1 4h1m4-4h1m-1 4h1m-5 10v-5a1 1 0 011-1h2a1 1 0 011 1v5m-4 0h4"/></svg>
                 </div>
                 <h3 class="text-xl font-bold text-navy-900 mb-3">Outsourcing</h3>
@@ -217,14 +238,18 @@
                     <li class="flex items-start gap-2"><span class="text-accent mt-0.5">•</span>Prowadzenie dokumentacji ZUS</li>
                     <li class="flex items-start gap-2"><span class="text-accent mt-0.5">•</span>Raportowanie zarządcze</li>
                 </ul>
+                </div>
             </div>
         </div>
     </div>
 </section>
 
 <!-- CTA -->
-<section class="py-16 sm:py-20 hero-gradient relative overflow-hidden">
-    <div class="absolute inset-0 opacity-10"><div class="absolute top-10 left-1/4 w-64 h-64 bg-white rounded-full blur-3xl"></div></div>
+<section class="py-16 sm:py-20 relative overflow-hidden">
+    <div class="absolute inset-0">
+        <img src="https://images.unsplash.com/photo-1507679799987-c73779587ccf?w=1920&q=80" alt="" class="w-full h-full object-cover">
+        <div class="absolute inset-0 bg-navy-900/85"></div>
+    </div>
     <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 text-center relative z-10">
         <h2 class="text-2xl sm:text-4xl font-bold text-white mb-4">Masz pytania? Zadzwoń do nas</h2>
         <p class="text-white/70 text-base sm:text-lg mb-8 max-w-2xl mx-auto">Chętnie odpowiemy na wszystkie pytania i&nbsp;pomożemy dobrać najlepsze rozwiązanie dla Twojej firmy.</p>
